<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <RelativeLayout
            android:background="@color/main_color"
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageView
                android:background="?android:attr/actionBarItemBackground"
                android:id="@+id/image_view_add"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_add"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                tools:ignore="ContentDescription,RtlSymmetry" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_alignParentBottom="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_view_all"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/all"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_view_done"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/done"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_view_in_progress"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/in_progress"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_view_today"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/today"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        app:labelVisibilityMode="labeled"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu_nav"
        >
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>